--- a/bars.ui
+++ b/bars.ui
@@ -2,16 +2,19 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>692</width>
-    <height>83</height>
+    <width>639</width>
+    <height>169</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string/>
+   <string>Barcode Generator</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="contextMenuPolicy">
@@ -20,16 +23,16 @@
    <property name="locale">
     <locale language="Russian" country="Russia"/>
    </property>
-   <widget class="QPushButton" name="OkBtn">
+   <widget class="QPushButton" name="ok_btn">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>40</y>
-      <width>101</width>
-      <height>23</height>
+      <x>460</x>
+      <y>120</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -54,28 +57,28 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>10</y>
-      <width>161</width>
-      <height>22</height>
+      <x>20</x>
+      <y>30</y>
+      <width>111</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="editable">
      <bool>true</bool>
     </property>
     <property name="currentText">
-     <string>Введите № счета</string>
+     <string>№ счета</string>
     </property>
    </widget>
    <widget class="QComboBox" name="dev_type_box">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>10</y>
-      <width>161</width>
+      <x>140</x>
+      <y>30</y>
+      <width>151</width>
       <height>22</height>
      </rect>
     </property>
@@ -88,14 +91,14 @@
    </widget>
    <widget class="QComboBox" name="hosp_box">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>10</y>
-      <width>191</width>
-      <height>22</height>
+      <x>140</x>
+      <y>60</y>
+      <width>481</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="editable">
@@ -124,14 +127,43 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>40</y>
+      <x>140</x>
+      <y>10</y>
       <width>82</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
      <string>Вручную</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_btn">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>111</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Добавить</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="invoice_list">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>90</y>
+      <width>111</width>
+      <height>61</height>
+     </rect>
     </property>
    </widget>
   </widget>
